--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -11,6 +11,7 @@
 
 *{
     font-family: 'Montserrat', sans-serif;
+    margin: 0%;
 }
 
 body{
@@ -38,7 +39,7 @@ h2{
 #box{
     background-color: var(--primary);
     margin: 5rem;
-    margin-top: 20rem;
+    margin-top: 10rem;
 }
 
 #button{
@@ -52,7 +53,7 @@ h2{
     display: flex;
 
     max-width: 500px;
-    
+    padding: 0.5rem;
     overflow-x: scroll;
     scroll-snap-type: x
     mandatory;
