fixed maxium width in landing page view

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -11,7 +11,7 @@
 
 *{
     font-family: 'Montserrat', sans-serif;
-    margin: 0%;
+    /* margin: 0%; */
 }
 
 body{
@@ -38,8 +38,8 @@ h2{
 
 #box{
     background-color: var(--primary);
-    margin: 5rem;
-    margin-top: 10rem;
+    /* margin: 5rem;
+    margin-top: 10rem; */
 }
 
 #button{
@@ -52,8 +52,9 @@ h2{
 .slider{
     display: flex;
 
-    max-width: 500px;
-    padding: 0.5rem;
+    max-width: 390px;
+    
+    /* padding: 0.5rem; */
     overflow-x: scroll;
     scroll-snap-type: x
     mandatory;
