--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -52,7 +52,7 @@ h2{
 .slider{
     display: flex;
 
-    max-width: 390px;
+    max-width: 100vw;
     
     /* padding: 0.5rem; */
     overflow-x: scroll;
